--- a/MuseVNWeb/Views/Category/Index.cshtml
+++ b/MuseVNWeb/Views/Category/Index.cshtml
@@ -1,1 +1,40 @@
-﻿<h1>Nagana Pre. Its a start!</h1>
+﻿@model List<Category>
+
+<div class="container">
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">
+                Category List
+            </h2>
+        </div>
+        <div class="col-6 text-end">
+            <h2 class="text-primary">
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                    <i class="bi bi-plus-circle"></i> Create New Category
+                </a>
+            </h2>
+        </div>
+    </div>
+</div>
+
+<table class="table table-bordered talbetable-striped">
+    <thead>
+    <tr>
+        <th>
+            Category
+        </th>
+        <th>
+            Display Order
+        </th>
+    </tr>
+    </thead>
+    <tbody>
+        @foreach(var obj in Model.OrderBy(u => u.DisplayOrder)){
+            <tr>
+                <td>@obj.Name</td>
+                <td>@obj.DisplayOrder</td>
+            </tr>
+        }
+
+    </tbody>
+</table>
