--- a/MuseVNWeb/Views/Category/Delete.cshtml
+++ b/MuseVNWeb/Views/Category/Delete.cshtml
@@ -1,39 +1,34 @@
 ﻿@model Category
 
 <form method="post">
+    <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary"> Create Category</h2>
+            <h2 class="text-primary"> Delete Category</h2>
         </div>
         <div asp-validation-summary="All"></div> <!-- another option for asp-v-s ModelView-->
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-1"></label>
-            <input asp-for="Name" class="form-control"/>
-            <span asp-validation-for="Name" class="text-danger"></span>
+            <input asp-for="Name" disabled class="form-control" />
+            
         </div>
         <div class="mb-3 row p-1">
             <label asp-for="DisplayOrder" class="p-1"></label>
-            <input asp-for="DisplayOrder" class="form-control"/>
-            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+            <input asp-for="DisplayOrder" disabled class="form-control" />
+            
         </div>
 
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control border">Create new category</button>
+                <button type="submit" class="btn btn-danger form-control border">Delete category</button>
             </div>
             <div class="col-6 col-md-3">
-                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control border" >
+                <a asp-controller="Category" asp-action="Index" class="btn btn-secondary form-control border">
                     Back to list
                 </a>
             </div>
         </div>
-       
-        
+
+
     </div>
 </form>
-
-@section Scripts{
-    @{
-        <partial name="_ValidationScriptsPartial"/>
-    }
-}
