--- a/MuseVNWeb/Views/Category/Index.cshtml
+++ b/MuseVNWeb/Views/Category/Index.cshtml
@@ -1,5 +1,4 @@
 ﻿@model List<Category>
-
 <div class="container">
     <div class="row pt-4 pb-3">
         <div class="col-6">
@@ -17,7 +16,7 @@
     </div>
 </div>
 
-<table class="table table-bordered talbetable-striped">
+<table class="table table-bordered table-striped">
     <thead>
     <tr>
         <th>
@@ -26,6 +25,9 @@
         <th>
             Display Order
         </th>
+        <th>
+
+        </th>
     </tr>
     </thead>
     <tbody>
@@ -33,6 +35,16 @@
             <tr>
                 <td>@obj.Name</td>
                 <td>@obj.DisplayOrder</td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-Id="@obj.Id" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+                        <a asp-controller="Category" asp-action="Delete" asp-route-Id="@obj.Id" class="btn btn-danger border mx-2">
+                            <i class="bi bi-file-earmark-x"></i> Delete
+                        </a>
+                    </div>
+                </td>
             </tr>
         }
 
