--- a/MuseVNWeb/Areas/Admin/Views/Category/Edit.cshtml
+++ b/MuseVNWeb/Areas/Admin/Views/Category/Edit.cshtml
@@ -1,11 +1,16 @@
 ﻿@model Category
-
-<form method="post">
+<div class="card shadow border-0 nt-4">
+    <div class="card-header bg-primary bg-gradient">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Edit Category</h2>
+            </div>
+        </div>
+    </div>
+    <div class="card-body p-4">
+        <form method="post">
     <input asp-for="Id" hidden />
     <div class="border p-3 mt-4">
-        <div class="row pb-2">
-            <h2 class="text-primary"> Edit Category</h2>
-        </div>
         <div asp-validation-summary="All"></div> <!-- another option for asp-v-s ModelView-->
         <div class="mb-3 row p-1">
             <label asp-for="Name" class="p-1"></label>
@@ -32,6 +37,10 @@
 
     </div>
 </form>
+    </div>
+</div>
+
+
 
 @section Scripts {
     @{
