--- a/MuseVNWeb/Views/Shared/_Layout.cshtml
+++ b/MuseVNWeb/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+                        </li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" asp-area="Admin" data-bs-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
