Added repository patter on Platform, Tags, and Language

--- a/MuseVNWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/MuseVNWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -37,21 +37,21 @@
                     <input asp-for="Price" disabled class="form-control" />
 
                 </div>
-                <div class="mb-3 row p-1">
+@*                 <div class="mb-3 row p-1">
                     <label asp-for="GameTags" class="p-1"></label>
                     <input asp-for="GameTags" disabled class="form-control" />
 
-                </div>
+                </div> *@
                 <div class="mb-3 row p-1">
                     <label asp-for="Platform" class="p-1"></label>
                     <input asp-for="Platform" disabled class="form-control" />
 
                 </div>
-                <div class="mb-3 row p-1">
+@*                 <div class="mb-3 row p-1">
                     <label asp-for="SupportedLanguage" class="p-1"></label>
                     <input asp-for="SupportedLanguage" disabled class="form-control" />
 
-                </div>
+                </div> *@
                 <div class="mb-3 row p-1">
                     <label asp-for="Date" class="p-1"></label>
                     <input asp-for="Date" disabled class="form-control" />
