--- a/MuseVNWeb/Areas/Admin/Views/Product/Edit.cshtml
+++ b/MuseVNWeb/Areas/Admin/Views/Product/Edit.cshtml
@@ -37,21 +37,21 @@
             <input asp-for="Price" class="form-control" />
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
-        <div class="mb-3 row p-1">
+@*         <div class="mb-3 row p-1">
             <label asp-for="GameTags" class="p-1"></label>
             <input asp-for="GameTags" class="form-control" />
             <span asp-validation-for="GameTags" class="text-danger"></span>
-        </div>
+        </div> *@
         <div class="mb-3 row p-1">
             <label asp-for="Platform" class="p-1"></label>
             <input asp-for="Platform" class="form-control" />
             <span asp-validation-for="Platform" class="text-danger"></span>
         </div>
-        <div class="mb-3 row p-1">
+@*         <div class="mb-3 row p-1">
             <label asp-for="SupportedLanguage" class="p-1"></label>
             <input asp-for="SupportedLanguage" class="form-control" />
             <span asp-validation-for="SupportedLanguage" class="text-danger"></span>
-        </div>
+        </div> *@
         <div class="mb-3 row p-1">
             <label asp-for="Date" class="p-1"></label>
             <input asp-for="Date" class="form-control" />
