--- a/MuseVNWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/MuseVNWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -61,7 +61,7 @@
                             </td>
                         <td>@obj.Developer</td>
                         <td scope="row">@obj.Price</td>
-                        <td>@foreach(var tags in obj.GameTags) {
+@*                         <td>@foreach(var tags in obj.GameTags) {
                                     <p>@tags</p>
                             }
                             </td>
@@ -75,7 +75,7 @@
                             @foreach (var lang in obj.SupportedLanguage) {
                                 <p>@lang</p>
                             }
-                        </td>
+                        </td> *@
                         <td scope="row">@obj.Date</td>
 
                         <td>
