--- a/MuseVNWeb/Areas/Admin/Views/Product/Create.cshtml
+++ b/MuseVNWeb/Areas/Admin/Views/Product/Create.cshtml
@@ -36,11 +36,11 @@
                         <label asp-for="Price" class="ms-2"></label>
                         <span asp-validation-for="Price" class="text-danger"></span>
                     </div>
-                    <div class="form-floating">
+          @*           <div class="form-floating">
                         <input asp-for="GameTags" class="form-control shadow" placeholder="New Product" />
                         <label asp-for="GameTags" class="ms-2"></label>
                         <span asp-validation-for="GameTags" class="text-danger"></span>
-                    </div>
+                    </div> *@
                     <legend>Game Tags</legend>
                     <div class="form-floating">
                         <div class="form-check ">
@@ -61,11 +61,11 @@
                         <label asp-for="Platform" class="ms-2"></label>
                         <span asp-validation-for="Platform" class="text-danger"></span>
                     </div>
-                    <div class="form-floating">
+@*                     <div class="form-floating">
                         <input asp-for="SupportedLanguage" class="form-control shadow" placeholder="New Product" />
                         <label asp-for="SupportedLanguage" class="ms-2"></label>
                         <span asp-validation-for="SupportedLanguage" class="text-danger"></span>
-                    </div>
+                    </div> *@
                     <div class="form-floating mb-3">
                         <input asp-for="Date" class="form-control shadow" placeholder="New Product" />
                         <label asp-for="Date" class="ms-2"></label>
