--- a/MuseVNWeb/Views/Shared/_Layout.cshtml
+++ b/MuseVNWeb/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
 
     <footer class="border-top footer text-muted bg-primary">
         <div class="container">
-            &copy; 2024 - MuseVNWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - MuseVNWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Github</a>
             <i class="bi bi-heart-fill"></i>
         </div>
     </footer>
