--- a/MuseVNWeb/Areas/Admin/Views/Product/Create.cshtml
+++ b/MuseVNWeb/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model ProductViewModel
 <div class="card shadow border-primary nt-4">
     <div class="card-header bg-primary bg-gradient">
         <div class="row">
@@ -11,71 +11,86 @@
         <form method="post" class="row">
             <div class="border p-3">
                 <div class="form-group">
-          <!--          <div class="form-floating mb-3">
-                        <input asp-for="Id" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="Id" class="ms-2"></label>
-                        <span asp-validation-for="Id" class="text-danger"></span>
-                    </div> -->
+                    
+
                     <div class="form-floating">
-                        <input asp-for="Title" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="Title" class="ms-2"></label>
-                        <span asp-validation-for="Title" class="text-danger"></span>
+                        <input asp-for="Product.Title" class="form-control shadow" placeholder="New Product" />
+                        <label asp-for="Product.Title" class="ms-2"></label>
+                        <span asp-validation-for="Product.Title" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Description" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="Description" class="ms-2"></label>
-                        <span asp-validation-for="Description" class="text-danger"></span>
+                        <textarea asp-for="Product.Description" class="form-control shadow" placeholder="Description"></textarea>
+                        
+                        <span asp-validation-for="Product.Description" class="text-danger"></span>
                     </div>
                     <div class="form-floating">
-                        <input asp-for="Developer" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="Developer" class="ms-2"></label>
-                        <span asp-validation-for="Developer" class="text-danger"></span>
+                        <input asp-for="Product.Developer" class="form-control shadow" placeholder="New Product" />
+                        <label asp-for="Product.Developer" class="ms-2"></label>
+                        <span asp-validation-for="Product.Developer" class="text-danger"></span>
                     </div>
                     <div class="form-floating mb-3">
-                        <input asp-for="Price" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="Price" class="ms-2"></label>
-                        <span asp-validation-for="Price" class="text-danger"></span>
+                        <input asp-for="Product.Price" class="form-control shadow" placeholder="New Product" />
+                        <label asp-for="Product.Price" class="ms-2"></label>
+                        <span asp-validation-for="Product.Price" class="text-danger"></span>
                     </div>
-          @*           <div class="form-floating">
-                        <input asp-for="GameTags" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="GameTags" class="ms-2"></label>
-                        <span asp-validation-for="GameTags" class="text-danger"></span>
-                    </div> *@
-                    <legend>Game Tags</legend>
-                    <div class="form-floating">
-                        <div class="form-check ">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault">
-                                Default checkbox
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked="">
-                            <label class="form-check-label" for="flexCheckChecked">
-                                Checked checkbox
-                            </label>
-                        </div>
-                    </div>
+
                     <div class="form-floating mb-3">
-                        <input asp-for="Platform" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="Platform" class="ms-2"></label>
-                        <span asp-validation-for="Platform" class="text-danger"></span>
+                        <input type="hidden" asp-for="Product.Tag" id="Tags" />
+                        <span asp-validation-for="Product.Tag" class="text-danger"></span>
+                        @foreach (var Tag in Model.TagList) {
+                            <div class="form-check ">
+                                <input class="form-check-input checkbox-tag" type="checkbox" value="@Tag.Text" >
+                                <label class="form-check-label" for="@Tag.Text">
+                                    @Tag.Text
+                                </label>
+                            </div>
+                        }
                     </div>
-@*                     <div class="form-floating">
-                        <input asp-for="SupportedLanguage" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="SupportedLanguage" class="ms-2"></label>
-                        <span asp-validation-for="SupportedLanguage" class="text-danger"></span>
-                    </div> *@
+
                     <div class="form-floating mb-3">
-                        <input asp-for="Date" class="form-control shadow" placeholder="New Product" />
-                        <label asp-for="Date" class="ms-2"></label>
-                        <span asp-validation-for="Date" class="text-danger"></span>
+                        <input type="hidden" asp-for="Product.Language" id="Languages" />
+                        <span asp-validation-for="Product.Language" class="text-danger"></span>
+                        @foreach (var Lang in Model.LanguageList) {
+                            <div class="form-check ">
+                                <input class="form-check-input checkbox-language" type="checkbox" value="@Lang.Text">
+                                <label class="form-check-label" for="@Lang.Text">
+                                    @Lang.Text
+                                </label>
+                            </div>
+                        }
                     </div>
+
+                    <div class="form-floating mb-3">
+                        <input type="hidden" asp-for="Product.Platform" id="Platforms" />
+                        <span asp-validation-for="Product.Platform" class="text-danger"></span>
+                        @foreach (var Platform in Model.PlatformList) {
+                            <div class="form-check ">
+                                <input class="form-check-input checkbox-platform" type="checkbox" value="@Platform.Text">
+                                <label class="form-check-label" for="@Platform.Text">
+                                    @Platform.Text
+                                </label>
+                            </div>
+                        }
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Product.Date" class="form-control shadow" placeholder="New Product" />
+                        <label asp-for="Product.Date" class="ms-2"></label>
+                        <span asp-validation-for="Product.Date" class="text-danger"></span>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        <input asp-for="Product.ImageUrl" class="form-control shadow" placeholder="New Product" />
+                        <label asp-for="Product.ImageUrl" class="ms-2"></label>
+                        <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+                    </div>
+
+
 
                 </div>
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
-                        <button type="submit" class="btn btn-primary form-control border">Create</button>
+                        <button type="submit" class="btn btn-primary form-control border" id="getValuesBtn">Create</button>
                     </div>
                     <div class="col-6 col-md-3">
                         <a asp-controller="Product" asp-action="Index" class="btn btn-outline-primary form-control border">
@@ -95,4 +110,42 @@
     @{
         <partial name="_ValidationScriptsPartial"/>
     }
+    <script>
+        $(document).ready(function () {
+            $('#getValuesBtn').click(function () {
+                var tagValues = [];
+                var languageValues = [];
+                var platformValues = [];
+                $('.checkbox-tag:checked').each(function () {
+                    tagValues.push($(this).val());
+                });
+                $('.checkbox-language:checked').each(function () {
+                    languageValues.push($(this).val());
+                });
+                $('.checkbox-platform:checked').each(function () {
+                    platformValues.push($(this).val());
+                });
+                var tagValuesString = tagValues.join(',');
+                var languageValuesString = languageValues.join(',');
+                var platformValuesString = platformValues.join(',');
+
+                $("#Tags").val(tagValuesString);
+                $("#Languages").val(languageValuesString);
+                $("#Platforms").val(platformValuesString);
+            });
+        });
+
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons  lists   table visualblocks wordcount',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough |  align lineheight | numlist bullist indent outdent',
+            tinycomments_mode: 'embedded',
+            tinycomments_author: 'Author name',
+            mergetags_list: [
+                { value: 'First.Name', title: 'First Name' },
+                { value: 'Email', title: 'Email' },
+            ],
+            ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
+        });
+    </script>
 }
